css/about-style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&family=League+Spartan:wght@100;400&family=Roboto:wght@100&display=swap');

body {
    margin: 0;
    padding: 0;
    background-color:#e5e5e5;
}

.navbar {
    border-radius: 0;
    background-color: #ffff;
    z-index: 1000;
    position: fixed; 
    width: 100%; 
}


.navbar-brand {
    padding: 25px;
}

.navbar-brand img {
    height: 40px;
}

.navbar-toggle {
    margin: 25px 15px 25px 0;
}

.navbar-center {
    padding-top: 20px;
}


.navbar-center a {
    color: black !important;
    font-size: 15px;
    font-family: Karla;
}

.navbar-center a:hover {
    transition: .5s;
    color: #ff6d3c !important;
}
     
.navbar-right {
    padding: 20px;
}

.navbar-right a {
    padding: 20px;
}

.navbar-right i {
    font-size: 15px;
    color: black;
}

.navbar-right i:hover {
    transition: .5s;
    color:#ff6d3c;
}

.background-image {
    background-image: url('/images/about-background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    height: 100vh;
}

.content p {
    color: #ffff;
    font-size: 37px;
    font-family: League Spartan;
    font-weight: bolder;
}

.content {
    max-width: 600px;
    position: absolute;
    width: 50%; 
    margin-top: 20%;
    top: 50px;
    left: 10%;
}

.second-content {
    margin: 15% 0;
    display: flex;
}


.second-content h1 {
    margin-right: 10%;
    font-family: Karla;
    font-size: 56px;
    color: #00024B;
}

.second-content p {
    margin-top: 20px;
    font-family: League Spartan;
    font-size: 26px;
    font-weight: 400;
    color: #000000;
}

.paragraph-container {
    max-width: 750px;
}   


.third-content-container h2 {
    font-family: Karla;
    font-size: 48px;
    color: #00024b;
    display: flex;
    justify-content: center;
}

.third-content img {
    height: 200px;
    width: 200px;
}






.footer {
    background-color: #1f1f1f;
    padding: 60px 0;
    height: 540px;
    font-family: League Spartan;
}

.footer ul {
    list-style: none;
}


.footer-container {
    max-width: 1300px;
    margin: auto;
}


.footer-row {
    display: flex;
    flex-wrap: wrap;
}

.footer-content {
    width: 30%;
    padding: 0 5%;
}

.footer h4 {
    margin-bottom: 30px;
    font-size: 17px;
    font-weight: bolder;
    color: white;
}

.footer-content li {
    margin-bottom: 20px;
}

.footer-content li, a,p {
    color: white;
    font-size: 17px;
}

.footer-content i {
    padding-right: 10px;
    font-size: 20px;
}


.form-group input {
    margin-right: 25px;
    width: 236px;
    height: 38px;
    border-radius: 7px;
    background-color: #d8d8d8;
}

.form-group {
    display:inline-flex;
}

.footer-content button {
    color: black;
    font-size: 17px;
    border: none;
    border-radius: 20px;
    background-color: #ff6d3c;
    width: 98px;
    height: 38px;
}

.footer-content p {
    margin-bottom: 35px;
}

.footer-content2 {
    margin: 10% 0 0 5%;
}


.footer-content2 li {
    display: inline;
}

.footer-content2 ul {
    margin-bottom: 20px;
}


.footer-content2 li:not(:last-child) {
    padding-right: 60px;
}

.footer-content2 span {
    padding-left: 40px;
    font-weight: lighter;
    font-size: 17px;
    color: #ffffff;
}


@media(max-width: 1200px) {
    .footer-content {
        width: 50%;
    }

    .footer {
        height: auto;
    }

    .second-content {
        display: block;
    }

    .second-content h1 {
        font-size: 36px;
    }

    .second-content p {
        font-size: 20px;
    }

    .content p {
        font-size: 30px;
    }
}


@media(max-width: 992px) {  
    .footer-content {
        width: 100%;
        padding-bottom: 30px;
    }

    .form-group {
        display: block;
    }

    .form-group input {
        margin-bottom: 20px;
    }

    
    .footer-content2 li {
        display: block;
    }

    .footer-content2 li:not(:last-child) {
        padding-bottom: 20px;
    }
}

.footer-content a:hover {
    color: #ffffff;
}

.form-group button:hover {
    background-color: #ff7e53;
}

.footer-content2 a:hover {
    color: #ffffff;
}

